Adding the main template and styling

--- a/templates/loginForm.tmpl
+++ b/templates/loginForm.tmpl
@@ -1,12 +1,9 @@
-{{define "loginForm"}}
-<html>
-<body>
+{{define "body"}}
+<p>
 <form action="login">
 What is your name, Earthling?
 <input type="text" name="name" size="50">
 <input type="submit">
 </form>
 </p>
-</body>
-</html>
 {{end}}
