--- a/templates/logout.tmpl
+++ b/templates/logout.tmpl
@@ -1,9 +1,4 @@
-{{define "logout"}}
-<html>
-<head>
+{{define "body"}}
 <META http-equiv="refresh" content="10;URL=/index.html">
-<body>
 <p>Good-bye.</p>
-</body>
-</html>
 {{end}}
