--- a/templates/noName.tmpl
+++ b/templates/noName.tmpl
@@ -1,10 +1,7 @@
-{{define "noName"}}
-<html>
-<body>
+{{define "body"}}
+<p>
 <form action="login">
 C'mon, I need a name.
 </form>
 </p>
-</body>
-</html>
 {{end}}
