--- a/templates/time.tmpl
+++ b/templates/time.tmpl
@@ -1,16 +1,5 @@
-{{define "time"}}
-<doctype html>
-<html>
-<head>
-<style>
-p {font-size: xx-large}
-span.time {color: red}
-</style>
-</head>
-<body>
+{{define "body"}}
 <p>The time is now 
 <span class="time">{{.CurrentTime}}
 </span>{{.Name}}.</p>
-</body>
-</html>
 {{end}}
