--- a/templates/unknownRoute.tmpl
+++ b/templates/unknownRoute.tmpl
@@ -1,7 +1,3 @@
-{{define "unknownRoute"}}
-<html>
-<body>
+{{define "body"}}
 <p>These are not the URLs you're looking for.</p>
-</body>
-</html>
 {{end}}
