--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -1,20 +1,16 @@
 {{define "main"}}
   <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <div class="logo">
       &nbsp;
     </div>
     <hr class="logo" />
-    <div class="menu"><p>
-        Home | Time | Logout | About Us
-    </p></div>
-	{{template "body" .}}
-    <div class="menu"><p>
-        Home | Time | Logout | About Us
-    </p></div>
+   {{template "menu" .}}
+   {{template "body" .}}
+   {{template "menu" .}}
   </body>
 </html>
 {{end}}
