Spliting the cookie managmant and adding logs

--- a/src/github.com/mgrzmiel/css490/assignment3/templates/time.tmpl
+++ b/src/github.com/mgrzmiel/css490/assignment3/templates/time.tmpl
@@ -1,4 +1,4 @@
 {{define "body"}}
 <p>The time is now 
-<span class="time">{{.CurrentTime}}</span>{{.Name}}.</p>
+<span class="time">{{.CurrentTime}}</span> ({{.UTCTime}} UTC){{.Name}}.</p>
 {{end}}
