--- a/templates/time.tmpl
+++ b/templates/time.tmpl
@@ -1,4 +1,4 @@
 {{define "body"}}
 <p>The time is now 
-<span class="time">{{.CurrentTime}}</span>{{.Name}}.</p>
+<span class="time">{{.CurrentTime}}</span> ({{.UTCTime}} UTC){{.Name}}.</p>
 {{end}}
